# MouseFlightControl

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MouseFlightControl.spec  README-CN.md  README.md  activate.bat  config.yml  exec.py  flight.yml  localizer.py  pyinstaller.py  pyinstaller.spec  pyproject.toml  requirements.txt  run-debug.bat  run-publish.bat  run.py  setup.py
.github/workflows/: publish.yml
Inits/: A10.ini  AH64D.ini  AV8B.ini  CH47F.ini  F16.ini  FS2020.ini  Ka50.ini  L39.ini  Mi24.ini  Mi8.ini  OH58.ini  SA342.ini  Su25.ini  Su27.ini  Su33.ini  TF51D.ini  UH1.ini
Inputs/: A10.ini  AH-64D.ini  AH64D.ini  CH47F.ini  F14 RIO.ini  F14.ini  F15.ini  F16.ini  FighterJet.ini  JF17.ini  Ka50.ini  L39.ini  MIG21.ini  Mi-8MTV2.ini  Mi24.ini  Mi8.ini  Mosquito FB MK. VI.ini  OH58.ini  SA342.ini  Su25.ini  Su27.ini  TF51D.ini  UH-1H.ini  UH1.ini
Joycons/DCS World/: A10.diff.lua  AH-64D.diff.lua  AH64.diff.lua  AJS37.diff.lua  AV-8B.diff.lua  AV8B.diff.lua  CH-47F.diff.lua  CH47F.diff.lua  F-16C.diff.lua  F14.diff.lua  F15.diff.lua  F16_.lua  F16_Default.lua  F16_NoFFB.diff.lua  F16_No_Force_FLCS_Gradient.diff.lua  F18.diff.lua  F5E.diff.lua  FA-18.diff.lua  FreeCamera.diff.lua  JF17.diff.lua  Ka50.diff.lua  Mi-8MTV2.diff.lua  Mi24P.diff.lua  Mi8.diff.lua  Mirage F1.diff.lua  OH58.diff.lua  P-47D.diff.lua  P-51D.diff.lua  P51D.diff.lua  SA342.diff.lua  Su25T.diff.lua  Su27.diff.lua  Su30.diff.lua  UH1.diff.lua
Lua/: ini.lua  script.lua
Platform/DCS/Scripts/: Export.lua
Platform/DCS/Scripts/MouseFlightControl/: MouseFlightControl.lua
Presets/: AV-8B.ini  Ka-50.ini
docs/: manual_cn.md
emulators/: FreePIE.py
extension/: calc.c
extension/joystick/src/: input.c
extensions/: calc.c  hook-lupa.py
extensions/joystick/src/: input.c
hooks/: hook-lupa.py  hook-pyvjoy.py
i18n/: en_US.ts  en_US.yml  ru_RU.ts  ru_RU.yml  zh_CN.ts  zh_CN.yml
locales/: en_US.qm  en_US.ts  ru_RU.ts  zh_CN.qm  zh_CN.ts
modules/A-10C/: manifest.ini  module.ini
modules/AH-64D/: manifest.ini  module.ini
modules/AJS-37/: module.ini
modules/AJS37/: manifest.ini
modules/AV-8B/: manifest.ini  module.ini
modules/B737-800/: manifest.ini
modules/CH-47F/: manifest.ini  module.ini
modules/F-14B/: manifest.ini  module.ini
modules/F-15/: manifest.ini  module.ini
modules/F-16C/: manifest.ini  module.ini
modules/F-5E/: manifest.ini  module.ini
modules/F4U-1D/: manifest.ini  module.ini
modules/FA-18C/: manifest.ini  module.ini
modules/JF-17/: manifest.ini  module.ini
modules/Ka-50/: manifest.ini  module.ini
modules/L-39/: manifest.ini  module.ini
modules/MIG-21/: manifest.ini  module.ini
modules/Mi-24P/: manifest.ini
modules/Mi-8/: module.ini
modules/Mi-8MTV2/: manifest.ini
modules/Mi24/: module.ini
modules/Mirage F1/: manifest.ini  module.ini
modules/Mosquito FB MK. VI/: manifest.ini  module.ini
modules/OH-58D/: manifest.ini  module.ini
modules/P-51D/: manifest.ini
modules/SA342/: manifest.ini  module.ini
modules/Su-25/: manifest.ini
modules/Su-27/: manifest.ini
modules/Su-33/: manifest.ini
modules/Su-35S/: manifest.ini
modules/Su25/: module.ini
modules/Su27/: module.ini
modules/Su33/: module.ini
modules/TF51D/: module.ini
modules/UH1/: manifest.ini  module.ini
presets/: AV-8B.ini  Mi-8MTV2.ini
scripts/: Axis.lua  BurnerDetent.lua  ControlsIndicator.lua  SpeedAdjuster.lua  SpeedControl.lua  ThrottleEnhanced.lua  ZoomCamera.lua  ZoomCamera.txt  build.bat  lrelease.bat  lupdate.bat  uic.bat
scripts/ThrottleEnhanced/: i18n.lua  init.lua  options.lua
scripts/ThrottleEnhanced/locales/: en_us.tr  zh_cn.tr
scripts/locales/: indicator.tr  speed_adjuster.tr
src/: app.py  input.py  main.py  mainWindow.py  mainWindow.ui  utils.py
src/common/: config.py  constants.py  fs.py  win32.py
src/controller/: base.py  control.py  manager.py
src/controller/lockon/: dcs.py
src/data/: config.py  flight.py  init.py  input.py  spec.py
src/enums/: control.py  widget.py
src/flightsim/: connect.py  module.py
src/flightsim/dcs/: connect.py  dcs.lua
src/lib/: axis.py  config.py  event.py  fs.py  joystick.py  logger.py  num.py  process.py  screen.py  script.py  validator.py  win32.py
src/script_engine/: database.py  runtime.py
src/type/: axis.py  curve.py  filter.py  i18n.py  script.py  widget.py
src/ui/: CursorOverhaul.py  InterfaceOverlay.py  MainWindow.py  MainWindow.ui  Style.py
src/ui/overlay/: CursorGraph.py  HintLabel.py  IndicatorWindow.py  InterfaceOverlay.py
src/ui/page/: __init__.py  abstract.py  connect.py  controls.py  options.py  tune.py
src/ui/screen/: CursorGraph.py  HintLabel.py
src/ui/window/: ScriptWindow.py  axis.py  script.py
tasks/: lint.bat  lrelease.bat  lupdate.bat  uic.bat
