[tool.poetry]
name = "MouseFlightControl"
version = "0.16.3"
description = "Mouse flight control for DCS World"
authors = ["Dawson <bendawson0924@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[build-system]
requires = ["setuptools>=42", "wheel", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[[tool.poetry.packages]]
include = "*"
from = "src"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "==3.8.10"
altgraph = "==0.17.4"
importlib-metadata = "==8.5.0"
keyboard = "==0.13.5"
packaging = "==25.0"
pefile = "==2023.2.7"
pyinstaller = "==6.14.2"
pyinstaller-hooks-contrib = "==2025.6"
pynput = "==1.8.1"
PySide2 = "==5.15.2.1"
pyvjoy = "==1.0.1"
pywin32 = "==311"
pywin32-ctypes = "==0.2.3"
shiboken2 = "==5.15.2.1"
six = "==1.17.0"
zipp = "==3.20.2"
setuptools = "==75.3.2"
wheel = "==0.45.1"
build = "==1.2.2"
pydirectinput = "^1.0.4"
lupa = "^2.5"
ruff = "^0.14.2"
psutil = "^7.1.2"
vgamepad = "^0.1.0"
loguru = "^0.7.3"

[tool.poetry.build]
generate-setup-file = false

[tool.ruff]
exclude = ["src/ui/MainWindow.py"]

[tool.ruff.lint]
ignore = ["E722", "E731", "F821"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"
